bpy.data.meshes.new_from_object() doesn't increment user count for materials referenced by the mesh #65352

Closed
opened 2019-05-31 15:59:03 +02:00 by Ivan Lyubovnikov · 7 comments

System Information
Operating system: Linux-4.18.0-10-lowlatency-x86_64-with-debian-buster-sid 64 Bits
Graphics card: AMD RAVEN (DRM 3.26.0, 4.18.0-10-lowlatency, LLVM 7.0.0) X.Org 4.5 (Core Profile) Mesa 18.2.8

Blender Version
Broken: version: 2.80 (sub 73), branch: blender2.7, commit date: 2019-05-30 22:28, hash: fc336f973d
Worked: (optional)

Short description of error
When using bpy.data.meshes.new_from_object() for an object with a material, the amount of users for that material stays the same despite that the newly generated mesh also references it.
After removing the generated mesh with bpy.data.meshes.remove() the number of users becomes 0 also making the material on the original object look invalid in the interface:
material_no_users.png

Exact steps for others to reproduce the error

  1. open the attached blend file
  2. run the active script in the Text Editor
  3. see the output in the console and the material data-block highlighted in red in the Shader Editor

test.blend

**System Information** Operating system: Linux-4.18.0-10-lowlatency-x86_64-with-debian-buster-sid 64 Bits Graphics card: AMD RAVEN (DRM 3.26.0, 4.18.0-10-lowlatency, LLVM 7.0.0) X.Org 4.5 (Core Profile) Mesa 18.2.8 **Blender Version** Broken: version: 2.80 (sub 73), branch: blender2.7, commit date: 2019-05-30 22:28, hash: `fc336f973d` Worked: (optional) **Short description of error** When using bpy.data.meshes.new_from_object() for an object with a material, the amount of users for that material stays the same despite that the newly generated mesh also references it. After removing the generated mesh with bpy.data.meshes.remove() the number of users becomes 0 also making the material on the original object look invalid in the interface: ![material_no_users.png](https://archive.blender.org/developer/F7081298/material_no_users.png) **Exact steps for others to reproduce the error** 1) open the attached blend file 2) run the active script in the Text Editor 3) see the output in the console and the material data-block highlighted in red in the Shader Editor [test.blend](https://archive.blender.org/developer/F7081308/test.blend)

Added subscriber: @ivan_lyubovnikov

Added subscriber: @ivan_lyubovnikov

Added subscriber: @AlexKowel

Added subscriber: @AlexKowel

After some testing it appears that the breaking change was in 392e58afb321

After some testing it appears that the breaking change was in [392e58afb321 ](https://developer.blender.org/rB392e58afb32162d7d31e5cfc0d6206382e7e7d62)

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Bastien Montagne was assigned by Dalai Felinto 2019-05-31 17:04:44 +02:00

If the issue started on 392e58afb3, let's have Bastien to look at it.

If the issue started on 392e58afb321, let's have Bastien to look at it.

This issue was referenced by d62a749fcf

This issue was referenced by d62a749fcf4848958d748a4d5ef5c4f1172cd351

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65352
No description provided.