Fix T65352: bpy.data.meshes.new_from_object() doesn't increment user count for materials referenced by the mesh.

We cannot do refcount operations in a non-Main ID, this is forbidden.

While that whole func could probably use some love and refactor, for now
sticking to minimal changes and just moving refcounting op after mesh
has been transferred to Main database.